# Connect4Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
src/: CMakeLists.txt  Makefile  board.c  board.h  commandline.c  commandline.h  main.c  strategy.c  strategy.h
test/: CMakeLists.txt  board_suite.c  board_suite.h  boardtest.c  strategy_suite.c  strategy_suite.h  test_boards.h  tests.c
